# cvlib-image-sorter

./: README.md  cvlib_image_sorter.py  pyproject.toml
